--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -6,5 +6,14 @@
 </head>
 <body>
     <h1>This is just a template</h1>
+
+    {% for item in item_list %}
+    <ul>
+        <li>
+
+                {{ item.id }} -- {{ item.item_name }}
+        </li>
+    </ul>
+    {% endfor %}
 </body>
 </html>
