Section 6: end of section: namespacing

--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -8,12 +8,15 @@
     <h1>This is just a template</h1>
 
     {% for item in item_list %}
+
     <ul>
         <li>
 
-                {{ item.id }} -- {{ item.item_name }}
+            <a href="{% url 'food:detalle' item.id %}"> {{ item.id }} -- {{ item.item_name }} </a>
         </li>
     </ul>
+
     {% endfor %}
+
 </body>
 </html>
