--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -2,11 +2,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'food/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+
+    <nav class="navbar bg-primary" data-bs-theme="dark">
+        <a href="#" class="navbar-brand navbar-black">Food App</a>
+
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Add Item</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Delete Item</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">View Item</a>
+            </li>
+        </ul>
+    </nav>
+
+
     <h1>This is just a template</h1>
 
     {% for item in item_list %}
