--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -1,3 +1,4 @@
+{% extends 'food/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,7 @@
     <title>Title</title>
 </head>
 <body>
+ {% block body %}
 <h1>
     {{ item.item_name }}
 </h1>
@@ -14,5 +16,6 @@
 <h3>
     {{ item.item_price }}
 </h3>
+{% endblock %}
 </body>
 </html>
