--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -1,43 +1,40 @@
-{% load static %}
+
+{% extends 'food/base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
-    <link rel="stylesheet" href="{% static 'food/style.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
 <body>
 
-    <nav class="navbar bg-primary" data-bs-theme="dark">
-        <a href="#" class="navbar-brand navbar-black">Food App</a>
+    {% block body %}
+        {% for item in item_list %}
 
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Add Item</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Delete Item</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">View Item</a>
-            </li>
-        </ul>
-    </nav>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 offset-md-2">
+                        <img class="card" height="150px" src="{{ item.item_image }}" alt=""/>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>{{ item.item_name }}</h3>
+                        <h5>{{ item.item_description }}</h5>
+                        <h6>{{ item.item_price }}</h6>
+                    </div>
+                    <div class="col-md-2">
+
+                    </div>
+                </div>
+            </div>
 
 
-    <h1>This is just a template</h1>
 
-    {% for item in item_list %}
 
-    <ul>
-        <li>
 
-            <a href="{% url 'food:detalle' item.id %}"> {{ item.id }} -- {{ item.item_name }} </a>
-        </li>
-    </ul>
 
-    {% endfor %}
+        {% endfor %}
+    {% endblock %}
 
 </body>
 </html>
