--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -7,15 +7,20 @@
 </head>
 <body>
  {% block body %}
-<h1>
-    {{ item.item_name }}
-</h1>
-<h2>
-    {{ item.item_description }}
-</h2>
-<h3>
-    {{ item.item_price }}
-</h3>
+
+ <div class="container">
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <img height="300px" src="{{ item.item_image }}" class="card"/>
+        </div>
+          <div class="col-md-6">
+            <h1>{{ item.item_name }}</h1>
+            <h2>{{ item.item_description }}</h2>
+            <h3>{{ item.item_price }}</h3>
+        </div>
+    </div>
+ </div>
+
 {% endblock %}
 </body>
 </html>
