--- a/food/templates/food/index.html
+++ b/food/templates/food/index.html
@@ -13,9 +13,9 @@
         {% for item in item_list %}
 
             <div class="container">
-                <div class="row">
+                <div class="row mt-4">
                     <div class="col-md-3 offset-md-2">
-                        <img class="card" height="150px" src="{{ item.item_image }}" alt=""/>
+                        <img class="card" height="300px" width="300px" src="{{ item.item_image }}" alt=""/>
                     </div>
                     <div class="col-md-4">
                         <h3>{{ item.item_name }}</h3>
@@ -23,7 +23,7 @@
                         <h6>{{ item.item_price }}</h6>
                     </div>
                     <div class="col-md-2">
-
+                        <a href="{% url 'food:detalle' item.id %}" class="btn btn-success">Details</a>
                     </div>
                 </div>
             </div>
