--- a/food/templates/food/base.html
+++ b/food/templates/food/base.html
@@ -13,7 +13,7 @@
 
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Add Item</a>
+                <a class="nav-link active" href="{% url 'food:create_item' %}">Add Item</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Delete Item</a>
